# connect-4-rl-challenge

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
artifacts/released/: leaderboard.jsonl  muzero_debug.yaml  muzero_fast.yaml  muzero_latest.pt  muzero_latest.yaml  muzero_longrun.pt  muzero_longrun.yaml  muzero_sanity.yaml
configs/: base.yaml  muzero.yaml  muzero_debug.yaml  muzero_fast.yaml  muzero_sanity.yaml  ppo.yaml  ppo_curriculum.yaml  ppo_selfplay.yaml
connect4_rl/: arena.py  requirements.txt
connect4_rl_roumouz/: .gitignore  README.md  connect4_env.py  rl_agent.py
final_eval/: Arthur_final_best.pt  README.md  Roumouz_final_best.pt  arena.py  dqn_agent.py  friend_qnet.py  ui_streamlit.py
src/: board.py  callbacks.py  env.py  evaluate.py  match.py  train.py
src/agents/: alphabeta.py  base.py  random_policy.py  sb3_agent.py
src/agents/muzero/: __init__.py  agent.py  mcts.py  networks.py  replay.py
tests/final_eval/: test_arena_smoke.py  test_dqn_masks.py  test_render_bottom_first.py
tests/integration/: test_eval_vs_alphabeta.py  test_random_agent_match.py  test_selfplay_smoke.py
tests/unit/: test_board.py  test_env.py  test_eval_opponent_wiring.py  test_mcts_eval_path.py  test_mcts_masks.py  test_muzero_replay.py  test_network_shapes.py
